# intermediaries-in-the-offshore-world

./: .gitignore  3_ICIJ_data_analysis.py  README.md  classified_intermediaries.csv  data_cleaning.ipynb  diverse_notes.md  exploratory.ipynb  main.ipynb  main.py  powerlaw_analysis.py  propositions.ipynb  pyproject.toml  scrape_intermediaries.ipynb  scrape_intermediaries.py
enrichment_data/: enriched_top_5_percent_intermediaries.csv  random_sample_500.csv  top_5_percent_intermediaries.csv
logs/: intermediary_classifier.log.1  intermediary_classifier.log.2  intermediary_classifier.log.3  intermediary_classifier.log.4  intermediary_classifier.log.5
other/dot-graph/: agent_graph.dot  sample_network.dot
writing/: main.aux  main.bcf  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  new_outline.md  notes.md  presentation.tex  presentation_outline.md
writing/bib/: references.bib
writing/chapters/: appendix.aux  appendix.tex  bibliography.aux  bibliography.tex  conclusion.aux  conclusion.tex  data_methodology.aux  data_methodology.tex  discussion.aux  discussion.tex  empirical_analysis.aux  empirical_analysis.tex  introduction.aux  introduction.tex  theory.aux  theory.tex
writing/images/: jurisdiction_network_stats.txt
writing/tables/: country_network_stats.txt  jurisdiction_network_stats.txt
