[tool.poetry]
name = "bachelorthesiscode"
version = "0.1.0"
description = ""
authors = ["Sundance"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
plotly = "^6.0.0"
nbformat = "^5.10.4"
country-converter = "^1.3"
pandas-datareader = "^0.10.0"
wbdata = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
