[tool.poetry]
name = "bachelorthesiscode"
version = "0.1.0"
description = ""
authors = ["Sundance"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
plotly = "^6.0.0"
nbformat = "^5.10.4"
country-converter = "^1.3"
pandas-datareader = "^0.10.0"
wbdata = "^1.0.0"
kaleido = "0.2.1"
langgraph = "^0.3.5"
langsmith = "^0.3.11"
langchain-anthropic = "^0.3.9"
langchain-google-genai = "^2.0.11"
langchain-community = "^0.3.19"
networkx = "^3.4.2"
tqdm = "^4.67.1"
powerlaw = "^1.5"
google-genai = "^1.12.1"
setuptools = "^79.0.1"
wheel = "^0.45.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
